// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package seizure;

// The greeting service definition.
service SeizureService {
    // Sends a greeting
    rpc insertSeizure (SeizureRequest) returns (SeizureReply) {}
}

// The request message containing the user's name.
message SeizureRequest {
    int32 id = 1;
    Client customer = 2;
    SeizeInfo seizureInformation = 3;
    ProductName product = 4;
}

// The response message containing the greetings
message SeizureReply {
        int32 id = 1;
        string codigoError = 2;
        string mensajeError = 3;
}

message Client {

    string firstName = 1;
    string middleName = 2;
    string surname = 3;
    string lastSurname = 4;
    DocumentInfo document = 5;
}

message DocumentInfo {
    string documentType = 1;
    string documentNumber = 2;
}

message ProductName {
    string productID = 1;
    string productState = 2;
}

message SeizeInfo {
    int32 concept = 1;
    int32 seizureType = 2;
    int32 debitForm = 3;
    string receptionDate = 4;
    string processNumber = 5;
    int32 amount = 6;
    string city = 7;
    string address = 8;
    string judicialAccount = 9;
    string entity = 10;
    string seizureDate = 11;
    Client plaintiff = 12;
}

